[package]
name = "create-master-edition"
version = "0.0.1"
description = ""
authors = ["mvtthewrx <@mvtthewrx>"]
repository = "https://github.com/matthewrx/create-master-edition"
homepage = ""
edition = "2018"

[features]
no-entrypoint = []


[dependencies]
num-traits = "0.2"
num-derive = "0.3"
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.14.18"
mpl-token-metadata = { version="1.11.1", features = [ "no-entrypoint" ] }
spl-token = { version="~3.5.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="1.0.3", features = [ "no-entrypoint" ] }
thiserror = "1.0"


[dev-dependencies]
solana-program-test = "=1.14.18"
solana-sdk = "=1.14.18"

[lib]
crate-type = ["cdylib"]
path = "src/entrypoint.rs"